modified folder structure

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name='msapplication-TileColor' content='#ffffff' />
     <meta name='msapplication-TileImage' content='assets/icon/ms-icon-70x70.png' />
     <meta name='theme-color' content='#ffffff' />
-    <link rel='stylesheet' type="text/css" href='build/public/style/main.css'>
+    <link rel='stylesheet' type="text/css" href='build/style/main.css'>
 </head>
 
 <body>
@@ -23,6 +23,6 @@
         <div class='canvas'></div>
     </main>
     <footer>Copyright &copy; %USERNAME%</footer>
-    <script type='text/javascript' src='build/public/script/main.js'></script>
+    <script type='text/javascript' src='build/script/main.js'></script>
 </body>
 </html>
